# telegram_email_bot

./: .env.example  .env_example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
bot/: Dockerfile  config.py  handlers.py  keyboards.py  main.py  messages.py  middleware.py  photo_urls.py  service.py  utils.py
bot/states/: user_states.py
email_bot_web/: Dockerfile  entrypoint.sh  manage.py
email_bot_web/admin_utils/: admin_actions.py
email_bot_web/api/: api.py  email_routes.py  filter_routers.py  signals.py  tasks.py  user_routes.py
email_bot_web/api/repositories/: repositories.py
email_bot_web/api/services/: box_filter_services.py  email_processor.py  email_services.py  exceptions.py  imap_listener.py  tasks.py  tools.py  user_services.py
email_bot_web/api/tests/: conftest.py  test_email_routers.py  test_filter_routers.py  test_user_routers.py
email_bot_web/core/: asgi.py  celery.py  settings.py  urls.py
email_bot_web/crypto/: crypto_utils.py
email_bot_web/email_bot_web/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
email_bot_web/email_domain/: admin.py  apps.py  schema.py
email_bot_web/email_domain/migrations/: 0001_initial.py
email_bot_web/email_service/: admin.py  logger_config.py  models.py  schema.py
email_bot_web/infrastructure/: email_processor.py  image_create.py  imap_listener.py  tasks.py
email_bot_web/infrastucture/: bot_utils.py  email_processor.py  image_create.py  imap_listener.py  tasks.py  tools.py
email_bot_web/user/: admin.py  models.py
email_bot_web/user/migrations/: 0001_initial.py
(+5 files in other folders)
