[tool.poetry]
name = "email-bot"
version = "0.1.0"
description = ""
authors = ["Alexandr Svetlov <s3t1qs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1"
django-ninja = "^0.22.2"
psycopg2-binary = "^2.9.7"
redis = "^5.0.0"
celery = "^5.3.4"
aiogram = "2.14.3"
uvicorn = "^0.23.2"
flower = "^2.0.1"
aioimaplib = "^1.0.1"
bs4 = "^0.0.1"
chardet = "^5.2.0"
types-chardet = "^5.0.4.6"
pillow = "^10.0.1"
django-redis = "^5.4.0"
pytest-django = "^4.5.2"
pytest-asyncio = "^0.21.1"
pytest-sugar = "^0.9.7"
factory-boy = "^3.3.0"
cryptography = "^41.0.4"
html2image = "^2.0.4.3"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
